--- a/next-microcms/package.json
+++ b/next-microcms/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -17,6 +17,8 @@
     "eslint-config-next": "13.4.12",
     "microcms-js-sdk": "^2.5.0",
     "next": "13.4.12",
+    "next-seo": "^6.1.0",
+    "next-sitemap": "^4.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.5",
